[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-redact"
version = "0.1.0"
description = "CLI tool for redacting personally identifiable information from files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
pii_redact = "pii_redact:main"

[tool.setuptools]
py-modules = ["pii_redact", "config", "matchers", "redactor", "reporters"]
packages = ["file_handlers"]
